fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -39,4 +39,5 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x:hidden;
 }
